# ts_reasoning

./: .gitignore  README.md  pyproject.toml
reports/: SUMMARY.md  chattime.md  itformer.md  opentslm.md
reports/labelling_descriptions/: README.md  chatts_decoding_failure_example.md  chatts_multivariate_channel_61.csv  chatts_multivariate_subsystem3.csv  chatts_univariate_channel_66.csv  ool_meta.json  ool_points.csv  vlm_multivariate_subsystem3.csv
src/: __init__.py  config.py  data.py  graph.py  kg.py  llm.py  main.py  mission_kg.py  models.py  nodes.py  observability.py
src/agentic/: __init__.py  graph.py  kg.py  main.py  mission_kg.py  nodes.py  tools.py
src/agentic/agents/: __init__.py  analysis.py  orchestrator.py  perception.py
src/agents/: analysis.py  base.py  orchestrator.py  perception.py
src/labelling/: __init__.py  descriptor.py  ool.py  plots.py  run_descriptor.py  run_ool.py  vlm.py
